# pyobs-polaris

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  README.md  TODO.md  conanfile.txt  polaris.qmlproject  pyobs-gui++.qmlproject
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: Dependencies.cmake
examples/plugins/: TelescopeQuickView.qml
fixtures/: _comm.yaml  acquisition.yaml  autofocus.yaml  autoguiding.yaml  camera.yaml  httpfilecache.yaml  mode.yaml  telescope.yaml  weather.yaml
qml/: LoginWindow.qml  Main.qml  MainWindow.qml  PluginLoader.qml  SidebarPanelRegistry.qml  WidgetRegistry.qml
qml/views/: AcquisitionView.qml  AutoFocusView.qml  AutoGuidingView.qml  CameraView.qml  DashboardView.qml  EventsView.qml  LogsView.qml  ModeView.qml  RoofView.qml  SettingsView.qml  ShellView.qml  StatusView.qml  TelescopeView.qml  WeatherView.qml
qml/widgets/: CoolingPanel.qml  FiltersPanel.qml  FocuserPanel.qml  KeyValueCard.qml  LogFooter.qml  Permissions.js  RoofWidget.qml  SidebarColumn.qml  TemperaturesPanel.qml  WireValueFormat.js
scripts/: screenshot_page.py
src/: main.cpp
src/codec/: Decode.cpp  Decode.h  Encode.cpp  Encode.h  InterfaceSchema.h  SchemaParse.cpp  SchemaParse.h  VariantBridge.cpp  VariantBridge.h  WireType.cpp  WireType.h  WireValue.h
src/comm/: Discovery.cpp  Discovery.h  EventLogModel.cpp  EventLogModel.h  EventManager.cpp  EventManager.h  JplHorizonsClient.cpp  JplHorizonsClient.h  ModuleInfo.h  ModuleListModel.cpp  ModuleListModel.h  Rpc.cpp  Rpc.h  SimbadClient.cpp  SimbadClient.h  StateSubscription.cpp  StateSubscription.h  StateSubscriptionManager.cpp  StateSubscriptionManager.h  VfsClient.cpp  VfsClient.h  XmppClient.cpp  XmppClient.h
src/config/: AppSettings.cpp  AppSettings.h  SavedAccountsModel.cpp  SavedAccountsModel.h  VfsEndpointsModel.cpp  VfsEndpointsModel.h
src/fits/: FitsFileWriter.cpp  FitsFileWriter.h  FitsImage.cpp  FitsImage.h  FitsImageItem.cpp  FitsImageItem.h  FitsStretch.cpp  FitsStretch.h
src/plot/: PlotItem.cpp  PlotItem.h
src/shell/: ShellCommandParser.cpp  ShellCommandParser.h
src/util/: CoordinateTransform.cpp  CoordinateTransform.h  Sexagesimal.cpp  Sexagesimal.h
tests/: CMakeLists.txt
tests/codec/: tst_encode.cpp  tst_schema.cpp  tst_variantbridge.cpp  tst_wirevalue.cpp
tests/comm/: tst_eventmanager.cpp  tst_jplhorizonsclient.cpp  tst_modulelistmodel.cpp  tst_simbadclient.cpp  tst_statesubscription.cpp  tst_vfsclient.cpp
tests/config/: tst_appsettings.cpp  tst_savedaccountsmodel.cpp  tst_vfsendpointsmodel.cpp
tests/fits/: tst_fitsfilewriter.cpp  tst_fitsimage.cpp  tst_fitsimageitem.cpp  tst_fitsstretch.cpp
tests/plot/: tst_plotitem.cpp
tests/shell/: tst_shellcommandparser.cpp
tests/util/: tst_coordinatetransform.cpp  tst_sexagesimal.cpp
